Properly glued indexHeader to header

--- a/_sass/layout/index.scss
+++ b/_sass/layout/index.scss
@@ -17,6 +17,7 @@
     -o-transform: skew(30deg);
     transform: skew(30deg);
     border-bottom-left-radius: 25px;
+    margin-top: -1px;
   }
 }
 
