--- a/_sass/abstracts/media.scss
+++ b/_sass/abstracts/media.scss
@@ -1,15 +1,11 @@
 @media screen and (max-width: 820px) {
   body{
-    //font-size: 14px;
+    font-size: 16px;
   }
 
   .sliderContainer{
     width: 600px;
     margin: auto;
-
-    #slider{
-      ;
-    }
 
     &-shadow{
       width: 600px;
