--- a/_sass/layout/index.scss
+++ b/_sass/layout/index.scss
@@ -70,7 +70,7 @@
   & .contentGrid{
     display: grid;
     grid-gap: 5px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
     grid-auto-flow: dense;
 
     & img{
@@ -126,6 +126,12 @@
 }
 
 #programming{
+  & .contentGrid{
+    grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
+  }
+}
+
+#past{
   & .contentGrid{
     grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
   }
